# dev-research

puzzle1/demo1/: Makefile
puzzle1/demo1/main/: hello_world_main.c
puzzle2/demo2/: Makefile  example_test.py  sdkconfig
puzzle2/demo2/main/: CMakeLists.txt  hello_world_main.c
puzzle2/demo2/software/: Public.h
puzzle3/demo3/: Makefile  example_test.py  sdkconfig.old
puzzle3/demo3/main/: CMakeLists.txt  hello_world_main.c
puzzle3/demo3/software/uart/: my_uart.c  my_uart.h
puzzle3/demo3/software/wifi/: Wifi.c  Wifi.h
